# zellij-status

./: .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.github/: renovate.json5
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  pr_semantic.yml  release.yml  release_please.yml
.mise/: config.toml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml
docs/: advanced-features.md  config-reference.kdl
examples/: GUIDE.txt  README.md
examples/default/: config.kdl  layout.kdl
examples/dev/: config.kdl  layout.kdl
examples/gallery-horizontal/: config.kdl  layout.kdl
examples/gallery-vertical/: config.kdl  layout.kdl
examples/horizontal/: config.kdl  layout.kdl
examples/minimal/: config.kdl  layout.kdl
examples/powerline/: config.kdl  layout.kdl
examples/scotty/: config.kdl  layout.kdl
examples/vertical/: config.kdl  layout.kdl
examples/vertical-right/: config.kdl  layout.kdl
schema/: config-schema.json
src/: config.rs  lib.rs  main.rs  schema.rs  state.rs
src/notify/: config.rs  mod.rs  protocol.rs  tracker.rs
src/render/: bar.rs  color.rs  format.rs  mod.rs  vertical.rs
src/widgets/: cap.rs  command.rs  datetime.rs  mod.rs  mode.rs  notification.rs  pipe.rs  session.rs  swap_layout.rs  tabs.rs
