[package]
name = "zellij-status"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "A Zellij plugin that combines vertical tabs, styled status bars, and notification tracking"
repository = "https://github.com/scottames/zellij-status"

[dependencies]
zellij-tile = "0.43.1"
anstyle = "1.0"
unicode-width = "0.2"
regex = "1.12"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
kdl = "4.7"
rstest = "0.26"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
